cambios generales header y footer

--- a/vistas/fxpedals.html
+++ b/vistas/fxpedals.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@300&display=swap" rel="stylesheet"><link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@300&display=swap" rel="stylesheet">
   <title>Horizon-Guitars</title>
   <link rel="stylesheet" href="../css/styles.css">
   <script src="https://kit.fontawesome.com/e91f63f36a.js" crossorigin="anonymous"></script>
@@ -14,9 +19,9 @@
     <div class="row header-row">
 
       <div class="col-1 d-flex header-socialM-col">  <!--Social Media Col Izquierda-->
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
 
         <div class="row">
           <div class="col"> <!--Logo Col-->
@@ -26,7 +31,7 @@
       </div>
       
       <nav class="col-10 text-center header-nav"> <!--Header Main Col Centro-->
-        <h1>Horizon</h1>
+        <a href="../index.html"><h1>Horizon</h1></a>
         <a class="btn btn-dark btn-lg mt-5" href="guitar.html" role="button">Guitar</a>
         <a class="btn btn-dark btn-lg mt-5" href="bass.html" role="button">Bass</a>
         <a class="btn btn-dark btn-lg mt-5" href="fxpedals.html" role="button">Fx Pedals</a>
