--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Horizon-Bootstrap</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/e91f63f36a.js" crossorigin="anonymous"></script>
@@ -14,12 +17,12 @@
     <div class="row header-row">
 
       <div class="col-1 d-flex header-socialM-col">  <!--Social Media Col Izquierda-->
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
 
         <div class="row">
-          <div class="col"> <!--Logo Col-->
+          <div class="col logo-col"> <!--Logo Col-->
             <img src="./assets/music-logo.png" alt="music logo" class="img-fluid img-logo">
           </div>
         </div>
