Cambios en animaciones footer

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
         <a href="./vistas/artists.html" class="footer-btn">Support</a>
       </div>
       
-      <div class="col-4 d-flex footer-p">
-        <p>Contact Us:</p>
-        <p>838.856.2747 (fax)
+      <div class="col-sm-1 mt-2 d-flex footer-btn">
+        <button type="button" class="btn btn-outline-dark">ASDASDASDA</button>
+        <!--<p>838.856.2747 (fax)
           Sun Valley CA, 91272
           8953 Pendleton St.
           info@horizongear.com
-          800.670.6632</p>
+          800.670.6632</p>-->
       </div>
     </nav>
   </footer>
