--- a/vistas/guitar.html
+++ b/vistas/guitar.html
@@ -123,7 +123,7 @@
   </main>
 
   <footer class="container-fluid footer"> <!--Footer-->
-    <nav class="row footer-nav d-flex">
+    <nav class="row d-flex footer-nav">
       <div class="col-8 d-flex footer-list">
         <a href="./vistas/findus.html" class="footer-btn">Artists</a>
         <a href="./vistas/support.html" class="footer-btn">Horizon-Apparel</a>
