--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/e91f63f36a.js" crossorigin="anonymous"></script>
 </head>
-<body class="body-index">  <!--Header-->
+<body class="body-index">  <!--Headerr-->
   <header class="container-fluid header-cont">
     <div class="row header-row">
 
