--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/e91f63f36a.js" crossorigin="anonymous"></script>
 </head>
-<body class="body-index">  <!--Headerr-->
+<body class="body-index">  <!--Header-->
   <header class="container-fluid header-cont">
     <div class="row header-row">
 
@@ -30,11 +30,11 @@
       
       <nav class="col-10 text-center header-nav"> <!--Header Main Col Centro-->
         <h1>Horizon</h1>
-        <a class="btn btn-dark btn-lg mt-5" href="./vistas/guitar.html" role="button">Guitar</a>
-        <a class="btn btn-dark btn-lg mt-5" href="./vistas/bass.html" role="button">Bass</a>
-        <a class="btn btn-dark btn-lg mt-5" href="./vistas/fxpedals.html" role="button">Fx Pedals</a>
-        <a class="btn btn-dark btn-lg mt-5" href="./vistas/amps.html" role="button">Amps</a>
-        <a class="btn btn-dark btn-lg mt-5" href="./vistas/accesories.html" role="button">Accesories</a>
+        <a class="btn btn-dark btn-lg mt-5 mx-3" href="./vistas/guitar.html" role="button">Guitar</a>
+        <a class="btn btn-dark btn-lg mt-5 mx-3" href="./vistas/bass.html" role="button">Bass</a>
+        <a class="btn btn-dark btn-lg mt-5 mx-3" href="./vistas/fxpedals.html" role="button">Fx Pedals</a>
+        <a class="btn btn-dark btn-lg mt-5 mx-3" href="./vistas/amps.html" role="button">Amps</a>
+        <a class="btn btn-dark btn-lg mt-5 mx-3" href="./vistas/accesories.html" role="button">Accesories</a>
 
                                 <!--Encontrar razón por la cual no es clickeable-->
         <div class="dropdown"> <!--Dropdown se activa a partir de los 500px-->
@@ -124,12 +124,16 @@
       </div>
       
       <div class="col-sm-1 mt-2 d-flex footer-btn">
-        <button type="button" class="btn btn-outline-dark">ASDASDASDA</button>
-        <!--<p>838.856.2747 (fax)
-          Sun Valley CA, 91272
-          8953 Pendleton St.
-          info@horizongear.com
-          800.670.6632</p>-->
+        <input type="checkbox" id="activate-footer-btn-box">
+        <label for="activate-footer-btn-box">
+          <p>Contact Us:</p>
+         <div class="footer-btn-box text-center">
+            Sun Valley CA, 91272
+            8953 Pendleton St.
+            info@horizongear.com
+          </div>
+       </label>
+        </div>
       </div>
     </nav>
   </footer>
