--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <main class="container-fluid"> <!--Main-->
     <section class="row">
 
-      <div class="col-12"> <!--Carousel col-->
+      <div class="col-md-12"> <!--Carousel col-->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">  <!--Carousel-->
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -119,7 +119,7 @@
     <nav class="row footer-nav d-flex">
       <div class="col-8 d-flex footer-list">
         <a href="./vistas/findus.html" class="footer-btn">Artists</a>
-        <a href="./vistas/support.html" class="footer-btn">Horizon-Apparel</a>
+        <a href="./vistas/apparel.html" class="footer-btn">Horizon-Apparel</a>
         <a href="./vistas/artists.html" class="footer-btn">Support</a>
       </div>
       
