--- a/vistas/acc.html
+++ b/vistas/acc.html
@@ -62,7 +62,7 @@
     <section class="row">
       <div class="col my-5 d-flex card-column"> <!--Main merchandise col-->
         <div class="card" style="width: 30rem;"> <!--Utilizo cards de BS-->
-          <img src="../assets/amp1.png" class="card-img-top" alt="...">
+          <img src="../assets/acc1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -71,7 +71,7 @@
         </div>
 
         <div class="card" style="width: 30rem;"> <!--Las últimas 2 cards no se alinean al resto-->
-          <img src="../assets/amp2.png" class="card-img-top" alt="...">
+          <img src="../assets/acc2.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -80,7 +80,7 @@
         </div>
 
         <div class="card" style="width: 30rem;">
-          <img src="../assets/amp3.png" class="card-img-top" alt="...">
+          <img src="../assets/acc3.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -89,7 +89,7 @@
         </div>
 
         <div class="card" style="width: 30rem;">
-          <img src="../assets/amp4.png" class="card-img-top" alt="...">
+          <img src="../assets/acc4.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="card" style="width: 30rem;">
-          <img src="../assets/amp5.png" class="card-img-top img-fluid" alt="...">
+          <img src="../assets/acc5.png" class="card-img-top img-fluid" alt="...">
           <div class="card-body">
             <h5 class="card-title mt-5">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="card" style="width: 30rem;">
-          <img src="../assets/amp6.png" class="card-img-top mt-5" alt="...">
+          <img src="../assets/acc6.png" class="card-img-top mt-5" alt="...">
           <div class="card-body">
             <h5 class="card-title mt-5">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
