--- a/vistas/guitar.html
+++ b/vistas/guitar.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <script src="https://kit.fontawesome.com/e91f63f36a.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="body-internal">
   <header class="container-fluid header-cont"> <!--Header-->
     <div class="row header-row">
 
@@ -62,58 +62,58 @@
 
   <main class="container-fluid"> <!--Main-->
     <section class="row">
-      <div class="col m-5 d-flex card-column"> <!--Main merchandise col-->
+      <div class="col my-5 d-flex card-column"> <!--Main merchandise col-->
         <div class="card" style="width: 30rem;"> <!--Utilizo cards de BS-->
           <img src="../assets/guitar1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
+          </div>
+        </div>
+
+        <div class="card" style="width: 30rem;"> <!--Las últimas 2 cards no se alinean al resto-->
+          <img src="../assets/guitar2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
-          <img src="../assets/guitar1.png" class="card-img-top" alt="...">
+          <img src="../assets/guitar3.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
-          <img src="../assets/guitar1.png" class="card-img-top" alt="...">
+          <img src="../assets/guitar4.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
-          <img src="../assets/guitar1.png" class="card-img-top" alt="...">
+          <img src="../assets/guitar5.png" class="card-img-top img-fluid" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title mt-5">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
-          <img src="../assets/guitar1.png" class="card-img-top" alt="...">
+          <img src="../assets/guitar6.png" class="card-img-top mt-5" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title mt-5">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 30rem;">
-          <img src="../assets/guitar1.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
           </div>
         </div>
       </div> 
@@ -125,9 +125,9 @@
   <footer class="container-fluid footer"> <!--footer-->
     <nav class="row footer-nav d-flex">
       <div class="col-8 d-flex footer-list">
-        <a href="./vistas/findus.html" class="footer-btn">Artists</a>
-        <a href="./vistas/support.html" class="footer-btn">Horizon-Apparel</a>
-        <a href="./vistas/artists.html" class="footer-btn">Support</a>
+        <a href="findus.html" class="footer-btn">Artists</a>
+        <a href="apparel.html" class="footer-btn">Horizon-Apparel</a>
+        <a href="artists.html" class="footer-btn">Support</a>
       </div>
       
       <div class="col-sm-1 mt-2 d-flex footer-btn">
