--- a/vistas/bass.html
+++ b/vistas/bass.html
@@ -64,54 +64,54 @@
         <div class="card" style="width: 30rem;"> <!--Utilizo cards de BS-->
           <img src="../assets/bass1.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Fender - Squier</h5>
+            <p class="card-text">Body: Poplar - Neck: Satin Urethane - Pickups: Double Ceramic Humbucker - Bridge: 4-Saddle Standard </p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;"> <!--Las últimas 2 cards no se alinean al resto-->
           <img src="../assets/bass2.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Ibanez 4 String Bass Guitar</h5>
+            <p class="card-text">Body: Mahogany - Fretboard: Rosewood - Pickups: Hybrid Singlecoil/Humbucker Comb - Scale Lenght: 34.0.</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/bass3.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Spector 5 String Bass Guitar</h5>
+            <p class="card-text">Body: Poplar - Neck: Maple - Pickups: P & J Pickups - Baterry Type: Zinc Carbon</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/bass4.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Musicman 5 String Bass</h5>
+            <p class="card-text">Body: Ash - Neck: Maple - Pickups: Dual Humbucking with Alnico pole pieces - Scale Length	34.0</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/bass5.png" class="card-img-top img-fluid" alt="...">
           <div class="card-body">
-            <h5 class="card-title mt-5">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title mt-5">Musicman 5 String Bass</h5>
+            <p class="card-text">Body: Ash - Neck: Mohagany - Pickups: Humbucking/Single coil with Alnico pole pieces - Scale Length	34.0.</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/bass6.png" class="card-img-top mt-5" alt="...">
           <div class="card-body">
-            <h5 class="card-title mt-5">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title mt-5">Spector 5 String Bass Guitar</h5>
+            <p class="card-text">Body: Nato Mahogany - Neck: Amara Ebony - Pickups: Double Spector Humbucker passive - Scale Lenght: 35.0 </p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
       </div> 
