--- a/vistas/fxpedals.html
+++ b/vistas/fxpedals.html
@@ -66,54 +66,54 @@
         <div class="card" style="width: 30rem;"> <!--Utilizo cards de BS-->
           <img src="../assets/fxpedal1.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Line 6  HX STOMP</h5>
+            <p class="card-text">Multi Effect - Digital</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;"> <!--Las últimas 2 cards no se alinean al resto-->
           <img src="../assets/fxpedal2.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Electro Harmonix Holy Stain </h5>
+            <p class="card-text">Sustain - Analog</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/fxpedal3.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Boss Distortion DS-1</h5>
+            <p class="card-text">Distortion - Analog</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/fxpedal4.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Boss Noise Suppressor NS-2</h5>
+            <p class="card-text">Noisegate - Analog</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/fxpedal5.png" class="card-img-top img-fluid" alt="...">
           <div class="card-body">
-            <h5 class="card-title mt-5">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title mt-5">Line6 POD GO</h5>
+            <p class="card-text">Multi Effect - Digital</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/fxpedal6.png" class="card-img-top mt-5" alt="...">
           <div class="card-body">
-            <h5 class="card-title mt-5">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title mt-5">Horizon Precision Drive</h5>
+            <p class="card-text">Overdrive - Analog</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
       </div> 
