--- a/vistas/guitar.html
+++ b/vistas/guitar.html
@@ -66,54 +66,57 @@
         <div class="card" style="width: 30rem;"> <!--Utilizo cards de BS-->
           <img src="../assets/guitar1.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Gibson - Les Paul</h5>
+            <p class="card-text">Neck material: Indian Rosewood - Bridge: Tune-o-matic with roller saddles Controls	3 Way Toggle Switch, 2 Volume and 2 Tone Knobs</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;"> <!--Las últimas 2 cards no se alinean al resto-->
           <img src="../assets/guitar2.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Squire - Stratocaster</h5>
+            <p class="card-text">Vintage-Style Hardtail Bridge
+              “C”-Shaped Neck Profile
+              3 Single-Coil Pickups
+              22.75”, 24” or 25.5” Scale</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/guitar3.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Squire - Telecaster</h5>
+            <p class="card-text">Body wood: Alder - Neck Material: maple - Bridge Pickup: V-Mod Single-Coil Telecaster® - Neck Pickup: V-Mod Single-Coil Telecaster®</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/guitar4.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Gibson- SG</h5>
+            <p class="card-text">Neck Material: Maple - Bridge: Gibraltar Performer - Neck pickup: Classic Elite (H) neck pickup (Passive/Ceramic) - Bridge pickup: Classic Elite (H) bridge pickup (Passive/Ceramic)</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/guitar5.png" class="card-img-top img-fluid" alt="...">
           <div class="card-body">
-            <h5 class="card-title mt-5">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title mt-5">ESP - Flying V Laiho Signature</h5>
+            <p class="card-text">Neck: Maple - Pickups: Double Humbucker Satin Black - Amaranth Fingerboard</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/guitar6.png" class="card-img-top mt-5" alt="...">
           <div class="card-body">
-            <h5 class="card-title mt-5">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title mt-5">Fender - Explorer</h5>
+            <p class="card-text">Body: Maple Neck: Maple - Amaranth Fingerboard - Pickups: Double Humbucker Viola Burst</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
       </div> 
