--- a/vistas/amps.html
+++ b/vistas/amps.html
@@ -64,54 +64,54 @@
         <div class="card" style="width: 30rem;"> <!--Utilizo cards de BS-->
           <img src="../assets/amp1.png" class="card-img-top smallimg-exc-1" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Mesa Boogie Dual Rectifier</h5>
+            <p class="card-text">Type: Tube - Total Power: 100W/50W - Preamp Tubes: 5 x 12AX7 - Power Tubes 4 X 6L6, 2 x 5U4</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;"> <!--Las últimas 2 cards no se alinean al resto-->
           <img src="../assets/amp2.png" class="card-img-top d-block mx-auto smallimg" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Mesa Boogie Triple Crown TC 50</h5>
+            <p class="card-text">Type: Tube - Total Power: 50W Class A/B - Preamp Tubes: 6 x 12AX7, 1 x 12AT7</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/amp3.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Marshall JCM900 Vintage</h5>
+            <p class="card-text">Output Wattage: 100V Outputs. 2x 1/4" Jack Speaker Outputs - Preamp Valves: 2x ECC83, 1x ECC83.</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/amp4.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Soldano Diamond Amp 327SD</h5>
+            <p class="card-text">Output Wattage: 100 Watts. - 2 Fully independent channels (clean/crunch)</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/amp5.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Laney - Ti100 Tony Iommy Signature Guitar Amp</h5>
+            <p class="card-text">Power RMS: 100 Watss - Channels: 2 - Preamp Valves: 8x ECC83 - Output Valves: 4X 6L6</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
 
         <div class="card" style="width: 30rem;">
           <img src="../assets/amp6.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+            <h5 class="card-title">Vox- AC15 Custom Tube</h5>
+            <p class="card-text">Power RMS: 15W - Speakers: 1 x 12" 16 ohm Celestion G12M Greenback (AC15C1) or Alnico Blue Speaker (AC15C1X).</p>
+            <a href="#" class="btn btn-dark">Buy Now 𝄞 ♫</a>
           </div>
         </div>
       </div> 
